qa/fhir-console/deployments.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    fluxcd.io/automated: 'true'
  name: clin-fhir-console
spec:
  template:
    spec:
      imagePullSecrets:
        - name: images-pull
      containers:
        - image: ferlabcrsj/fhir-console:768c788
          name: clin-fhir-console
