qa/fhir-console/ingresses.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: clin-fhir-server
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 10m
spec:
  tls:
    - hosts:
      - fhir-console.qa.clin.ferlab.bio
      secretName: letsencrypt-certificate
  rules:
    - host: fhir-console.qa.clin.ferlab.bio
      http:
        paths:
        - path: /
          backend:
            serviceName: clin-fhir-console
            servicePort: 8080
